--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               your personal tastes and nutritional needs.
             </p>
             <div class="hero__btns">
-              <a href="#" class="btn btn--primary _margin-right--sm">Start eating well</a>
-              <a href="#" class="btn btn--secondary">Learn mode &darr;</a>
+              <a href="#cta" class="btn btn--primary _margin-right--sm">Start eating well</a>
+              <a href="#how" class="btn btn--secondary">Learn mode &darr;</a>
             </div>
 
             <div class="hero__delivered">
@@ -342,7 +342,7 @@
       </section>
 
       <!-- PRICING -->
-      <section class="pricing-section margin-bottom--xl" id="pricing">
+      <section class="pricing-section margin-bottom--md" id="pricing">
         <div class="container">
           <p class="heading--subheading">Pricing</p>
           <h2 class="heading--secondary">Eating well without breaking the bank</h2>
