--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <script src="js/script.js" defer></script>
 
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/queries.css" />
+    <link rel="stylesheet" href="dist/styles.css" />
+    <link rel="stylesheet" href="dist/queries.css" />
   </head>
 
   <body>
