--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Omnifood</title>
+    <meta
+      name="description"
+      content="Omniffod is an AI-powered food subscription that will make you eat healthy again, 365 days per year."
+    />
+    <title>Omnifood &mdash; Never cook again</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,6 +21,10 @@
     <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
 
     <script src="js/script.js" defer></script>
+
+    <link rel="icon" href="img/favicon.png" />
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
 
     <link rel="stylesheet" href="dist/styles.css" />
     <link rel="stylesheet" href="dist/queries.css" />
@@ -74,7 +82,11 @@
             </div>
           </div>
           <div class="hero__img-box">
-            <img src="img/hero.png" alt="Woman enjoying foods" class="hero__img" />
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+              <img src="img/hero.png" alt="Woman enjoying foods" class="hero__img" />
+            </picture>
           </div>
         </div>
       </section>
