optimize images by specifying width and height

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <picture>
               <source srcset="img/hero.webp" type="image/webp" />
               <source srcset="img/hero-min.png" type="image/png" />
-              <img src="img/hero.png" alt="Woman enjoying foods" class="hero__img" />
+              <img src="img/hero.png" alt="Woman enjoying foods" width="606" height="598" class="hero__img" />
             </picture>
           </div>
         </div>
@@ -124,11 +124,23 @@
               </p>
             </div>
             <div class="how__img-box">
-              <img src="img/app/app-screen-1.png" alt="iPhone preferences screen" class="how__img" />
+              <img
+                src="img/app/app-screen-1.png"
+                width="204"
+                height="412"
+                alt="iPhone preferences screen"
+                class="how__img"
+              />
             </div>
             <!-- STEP 02 -->
             <div class="how__img-box">
-              <img src="img/app/app-screen-2.png" alt="iPhone approval screen" class="how__img" />
+              <img
+                src="img/app/app-screen-2.png"
+                width="204"
+                height="412"
+                alt="iPhone approval screen"
+                class="how__img"
+              />
             </div>
             <div class="how__text-box">
               <p class="how__number">02</p>
@@ -148,7 +160,13 @@
               </p>
             </div>
             <div class="how__img-box">
-              <img src="img/app/app-screen-3.png" alt="iPhone delivery screen" class="how__img" />
+              <img
+                src="img/app/app-screen-3.png"
+                width="204"
+                height="412"
+                alt="iPhone delivery screen"
+                class="how__img"
+              />
             </div>
           </div>
         </div>
