--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <!-- async CSS -->
     <link
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
+      rel="stylesheet"
+      media="print"
+      onload="this.onload=null;this.removeAttribute('media');"
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
     />
 
