--- a/index.html
+++ b/index.html
@@ -487,18 +487,19 @@
                 Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can
                 cancel or pause anytime. And the first meal is on us!
               </p>
-              <form class="cta__form" action="#">
+
+              <form name="sign-up" class="cta__form" netlify>
                 <div>
                   <label for="full-name">Full name</label>
-                  <input type="text" placeholder="John Smith" id="full-name" required />
+                  <input type="text" placeholder="John Smith" id="full-name" name="full-name" required />
                 </div>
                 <div>
                   <label for="email">Email address</label>
-                  <input type="email" placeholder="me@example.com" id="email" required />
+                  <input type="email" placeholder="me@example.com" id="email" name="email" required />
                 </div>
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select name="lead-source" id="select-where" required>
+                  <select name="lead-source" id="select-where" name="select-where" required>
                     <option value="">Please choose one option:</option>
                     <option value="friends-family">Friends and Family</option>
                     <option value="youtube">YouTube video</option>
