--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 cancel or pause anytime. And the first meal is on us!
               </p>
 
-              <form name="sign-up" class="cta__form" netlify>
+              <form name="signup" class="cta__form" netlify>
                 <div>
                   <label for="full-name">Full name</label>
                   <input type="text" placeholder="John Smith" id="full-name" name="full-name" required />
