--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
 
-    <link rel="stylesheet" href="dist/styles.css" />
-    <link rel="stylesheet" href="dist/queries.css" />
+    <link rel="stylesheet" href="dist/main.css" />
   </head>
 
   <body>
