--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <address>
               <p class="footer__contacts-address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
             </address>
-            <p><a class="footer-link" href="tel:415-201-6370">415-201-6370</a></p>
+            <p><a class="footer-link" href="tel:+4152016370">415-201-6370</a></p>
             <p><a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a></p>
           </div>
         </div>
